<resources>
    <string name="app_name">Education</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_theoretical_topics">Теория</string>
    <string name="feed">Главная</string>
    <string name="favorites_theoretical_topics">Избранное</string>
    <string name="quizes">Тесты</string>
    <string name="passed_quizes">Пройденные тесты</string>

    <string name="sample_title">Sample Title</string>
    <string name="sample_subject">Chemistry</string>
    <string name="sample_description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="subject">Subject: %s</string>
    <string name="grade">Grade: %s</string>
    <string name="body">Body</string>
    <string name="take_a_quize">Пройти тест</string>
    <string name="next">Next</string>

    <string name="enter_email">Введите email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Нет аккаунта? <b>СОЗДАТЬ</b> Сейчас!</string>
    <string name="or">Или</string>
    <string name="socials">Sing in with Socials</string>
    <string name="enter_name">Введите имя</string>
    <string name="sign_up_b">Зарегистрироваться</string>
    <string name="cannot_be_empty">Поле не может быть пустым</string>
    <string name="toast_no_such_user">Ошибка. Неверный логин или пароль</string>
    <string name="confirm">Получить бонусы</string>
    <string name="you_will_not_be_able_to_retake_the_quiz">*После подтверждения, тест закроется для прохождения*</string>

    <string name="subject_and_grade">%s, %s класс</string>
    <string name="video">Видео</string>
    <string name="gallery">Галерея</string>
    <string name="details">Подробнее</string>
    <string name="hide">Скрыть</string>
    <string name="no_body">"Описание отсутствует"</string>
    <string name="total_bonuses">Вы получите %s бонусов</string>
    <string name="logout">Выйти</string>
    <string name="complete">Завершить</string>
    <string name="go_back_to_signin">Уже есть аккаунт? <b>ВОЙТИ</b></string>
    <string name="choose_grade">Выберите класс</string>
    <string name="choose">Выбрать</string>
    <string name="your_grade">В каком классе вы учитесь?</string>
    <string name="default_grade">Класс</string>

    <string-array name="grades">
        <item>1 класс</item>
        <item>2 класс</item>
        <item>3 класс</item>
        <item>4 класс</item>
        <item>5 класс</item>
        <item>6 класс</item>
        <item>7 класс</item>
        <item>8 класс</item>
        <item>9 класс</item>
        <item>10 класс</item>
        <item>11 класс</item>
    </string-array>

    <string-array name="fav_subject">
        <item>Алгебра</item>
        <item>Русский язык</item>
        <item>Литература</item>
        <item>Английский язык</item>
        <item>История</item>
        <item>ОБЖ</item>
        <item>География</item>
        <item>Биология</item>
        <item>Информатика</item>
        <item>Обществознание</item>
        <item>Черчение</item>
        <item>Геометрия</item>
        <item>Физика</item>
        <item>Химия</item>
        <item>Чтение</item>
        <item>Природоведение</item>
        <item>Математика</item>
        <item>Естествознание</item>
        <item>МХК</item>
    </string-array>

    <string name="s_0">Алгебра</string>
    <string name="s_1">Русский</string>
    <string name="s_2">Литература</string>
    <string name="s_3">Английский язык</string>
    <string name="s_4">История</string>
    <string name="s_5">ОБЖ</string>
    <string name="s_6">География</string>
    <string name="s_7">Биология</string>
    <string name="s_8">Информатика</string>
    <string name="s_9">Обществознание</string>
    <string name="s_10">Черчение</string>
    <string name="s_11">Геометрия</string>
    <string name="s_12">Физика</string>
    <string name="s_13">Химия</string>
    <string name="s_14">Чтение</string>
    <string name="s_15">Природоведение</string>
    <string name="s_16">Математика</string>
    <string name="s_17">Естествознание</string>
    <string name="s_18">МХК</string>


    <string name="fav_sub">Выберите любимый предмет</string>
    <string name="continue_b">Продолжить</string>
    <string name="personals">Личный кабинет</string>
    <string name="bonuses_text">бонусов</string>
    <string name="favs_profile">Избранное</string>
    <string name="tests_profile">Пройденные тесты</string>
    <string name="all">Все</string>

    <string name="test_number_from_all">Вопрос %s/%s</string>
    <string name="quize_completed">Тест пройден!</string>

    <string name="quize_already_done">Вы уже прошли этот тест</string>

    <string name="retake_title">Вы действительно хотите перепройти тест?</string>
    <string name="retake_button">Попробовать снова!</string>

    <string name="added_to_favorites">Добавлено в избранное</string>
    <string name="removed_favorites">Удалено из избранного</string>
    <string name="recommended_topic">Рекомендуемая тема</string>

    <string name="nothing_to_show_recommended">...</string>
    <string name="nothing_to_show_recommended_toast">К сожалению, нам нечего вам показать</string>
    <string name="feed_fragment_label">Главная</string>

    <string name="favorite_topic_title">Избранное</string>
    <string name="favorite_topic_subtitle">Последнее добавленное:</string>
    <string name="no_favs">Ничего нет</string>

    <string name="rating_title">Рейтинг</string>
    <string name="rating_user_position">Вы здесь</string>
    <string name="applySecondAnswer">Подтвердить</string>
    <string name="your_answer">Ваш ответ</string>
    <string name="empty_text_as_incorrect">Пустой ответ считается за неправильный</string>
</resources>